[package]
name = "tier-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Derive macros for tier Rust configuration metadata"
license = "Apache-2.0"
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/tier-derive"
keywords = ["config", "derive", "serde", "macro", "tier"]
include = [
    "/src/**",
    "/README.md",
    "/Cargo.toml",
]

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]
targets = []

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
